# OpenGL-CMake-Config

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  GNSConfig.cmake  README.md  SDL2Config.cmake  SDL2_imageConfig.cmake  SDL2_mixerConfig.cmake
lib/gamenetworksockets_build/: example.txt  populate_all.bat
lib/gamenetworksockets_build/Debug/x64/: pop.bat
lib/gamenetworksockets_build/Debug/x86/: pop.bat
lib/gamenetworksockets_build/Release/x64/: pop.bat
lib/gamenetworksockets_build/Release/x86/: pop.bat
lib/protobuf_build/: example.txt  populate_all.bat
lib/protobuf_build/Debug/x64/: pop.bat
lib/protobuf_build/Debug/x86/: pop.bat
lib/protobuf_build/Release/x64/: pop.bat
lib/protobuf_build/Release/x86/: pop.bat
src/: main.cpp
